# inlined-vector

./: .gitignore  CHECKSUMS.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench_inlined_vector.cpp
cmake/: inlined-vector-config.cmake.in
examples/minimal/: CMakeLists.txt  main.cpp
include/: inlined_vector.hpp
packaging/: PACKAGE_MANAGER_SUBMISSION.md
packaging/conan/: conandata.yml
packaging/vcpkg/: portfile.cmake
tests/: fuzz_inlined_vector.cpp  test_inlined_vector.cpp
